# trifold

./: .cursorrules  .gitignore  Makefile  README.md  databricks.yml  pyproject.toml
.cursor/rules/: project.mdc
hooks/: app_build.py
ops/: locust_test.py  populate_db.py
src/trifold/: __init__.py
src/trifold/app/: api.py  app.py  config.py  database.py  dependencies.py  models.py  notify.py  timer.py  utils.py
src/trifold/ui/: .prettierignore  index.html  orval.config.ts  package.json  tsconfig.app.json  vite.config.ts
src/trifold/ui/.cursor/rules/: tanstack-react-router_guide.mdc
src/trifold/ui/src/: main.tsx  routeTree.gen.ts
src/trifold/ui/src/assets/: Logo.tsx
src/trifold/ui/src/components/: FadeIn.tsx  Layout.tsx  Profile.tsx  VersionBadge.tsx  mode-toggle.tsx
src/trifold/ui/src/components/magicui/: animated-beam.tsx
src/trifold/ui/src/components/table/: add-dessert-modal.tsx  columns.tsx  data-table.tsx  delete-dessert-modal.tsx  editable-cell.tsx
src/trifold/ui/src/lib/: api.ts  selector.ts  utils.ts
src/trifold/ui/src/routes/: __root.tsx  index.tsx
src/trifold/ui/src/routes/app/: route.tsx  table-editor.tsx
